Remove failing scroll DCHECK for VR

https://chromium-review.googlesource.com/c/chromium/src/+/842707 was
supposed to fix all the crashes/test failures for VR scrolling, but
there appears to be one DCHECK that is still regularly getting hit.

There's probably a better long-term solution, but for now, simply
remove the DCHECK.

TBR: tdresser@chromium.org, sahel@chromium.org
Bug: 795720
Change-Id: Icdbc4f26b5ff0bc48d9dbd05aced0008cbbc1c32
Reviewed-on: https://chromium-review.googlesource.com/843463
Reviewed-by: Brian Sheedy <bsheedy@chromium.org>
Commit-Queue: Brian Sheedy <bsheedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526106}
Former-commit-id: 1905451c0176c3a456bf290839915a8d38ae37d1